--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "nyc --all ava && nyc report --reporter=lcov"
+    "test": "nyc --all ava && nyc report --reporter=lcov",
+    "ava": "ava"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,11 @@
   "homepage": "https://github.com/dougmoscrop/stream-batched#readme",
   "devDependencies": {
     "ava": "^0.22.0",
+    "chunk-brake": "0.0.4",
+    "get-stream": "^3.0.0",
+    "into-stream": "^3.1.0",
     "nyc": "^11.2.1",
-    "sinon": "^4.0.1"
+    "sinon": "^4.0.1",
+    "pump-promise": "^1.0.0"
   }
 }
